--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body id="gradient">
     <h1>Background Generator</h1>
-    <input class="color1" type="color" name="color1" value="#00ff00">
+    <input class="color1" type="color" name="color1" value="#FFFFFF">
     <input class="color2" type="color" name="color2" value="#ff0000">
     <h2>Current Color-code</h2>
     <h3 id="color-code"></h3>
